--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.1.1",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "@vue/eslint-config-standard": "^7.0.0",
@@ -33,6 +32,7 @@
     ]
   },
   "dependencies": {
+    "moment": "^2.29.4",
     "v-calendar": "^3.0.0-alpha.8"
   }
 }
